codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__status_and_composer_fill_height_without_bottom_padding.snap
---
source: tui/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
• 处 理 中  (0秒  • esc 中 断 )     
                              
                              
› 让  Codex 做 点 什 么            
                              
             上 下 文 剩 余  100%
