codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__tests__status_and_queued_messages_snapshot.snap
---
source: tui/src/bottom_pane/mod.rs
expression: "render_snapshot(&pane, area)"
---
• 处 理 中  (0s • esc 中 断 )                        
                                                
  ↳ Queued follow-up question                   
    ⌥ + ↑ edit                                  
                                                
› 让  Codex 做 点 什 么                              
                                                
  上 下 文 剩 余  100% · ? 查 看 快 捷 键
